Guard against null Group in EffectWindow::group()

Closed windows don't belong to any group.

BUG: 476827